--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <img class="horseimg" src="images/horse.svg" alt="image"> 
 <img class="cloud" src="images/cloud.svg" alt="cloudimage">
 <img class="birds" src="images/birds.svg" alt="image-birds">
+<img class="dog" src="images/giphy.gif" alt="dog-image">
     </div>
   </body>
 </html>
