changes in style css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   </head>
   <body>
     <div class="bg-image">
-<img class="horseimg" src="images/horse.svg" alt="image"> 
-<img class="cloud" src="images/cloud.svg" alt="cloudimage">
-<img class="birds" src="images/birds.svg" alt="image-birds">
-<img class="dog" src="images/giphy.gif" alt="dog-image">
+      <div class="horse-div">
+          <img class="horseimg" src="images/horse.svg" alt="image"> 
+      </div class="horsediv">
+      <div class="cloud-div">
+          <img class="cloud" src="images/cloud.svg" alt="cloudimage">
+      </div>
+      <div class="birds-div">
+          <img class="birds" src="images/birds.svg" alt="image-birds">
+      </div>
+      <div>
+          <img class="dog" src="images/dog.gif" alt="dog-image">
+      </div>
     </div>
   </body>
 </html>
