--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
           <img class="dog" src="images/dog.gif" alt="dog-image">
       </div>
+      <img class="rock" src="images/rock.svg" alt="">
     </div>
   </body>
 </html>
