--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <img class="dog" src="images/dog.gif" alt="dog-image">
       </div>
       <img class="rock" src="images/rock.svg" alt="">
+      <img class="walker" src="images/walker.gif" alt="">
     </div>
   </body>
 </html>
