--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </div>
       <img class="rock" src="images/rock.svg" alt="">
       <img class="walker" src="images/walker.gif" alt="">
+      <img class="moon" src="images/moon.png" alt="">
     </div>
   </body>
 </html>
